# Mx-Compiler

./: .gitignore  CMakeLists.txt  configure  run-risc-v.bash
MxAntlr/: CMakeLists.txt  MxLexer.cpp  MxLexer.h  MxLexer.interp  MxLexer.tokens  MxParser.cpp  MxParser.h  MxParser.interp  MxParserBaseVisitor.h  MxParserVisitor.h
antlr4/: MxLexer.g4  MxParser.g4
src/: worker.cpp
src/ASM/: ASMBuilder.cpp  ASMBuilder.h  ASMNode.cpp  ASMNode.h  Register.h
src/AST/: ASTBaseVisitor.h  ASTBuilder.cpp  ASTBuilder.h  ASTNode.h
src/IR/: IRBaseVisitor.h  IRBuilder.cpp  IRBuilder.h  IRNode.cpp  IRNode.h  IRType.h  builtin.c  builtin.ll
src/Semantic/: SemanticChecker.cpp  SemanticChecker.h  SymbolCollector.h
src/Utility/: Exception.h  MxErrorListener.h  Scope.h  Type.h
